# Zkp_Project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  zkp.db
.github/workflows/: ci.yml
api/: __init__.py  config.py  dependencies.py  dependencies_jwt.py  main.py
api/middleware/: metrics.py  rate_limiter.py  request_id.py  request_logger.py
api/models/: __init__.py  api_key.py  database.py  invoice.py  organization.py  proof_log.py  usage_counter.py  user.py  webhook.py
api/routes/: auth.py  batch.py  billing.py  dashboard_auth.py  dashboard_keys.py  health.py  keys.py  proofs.py  usage.py
api/schemas/: __init__.py  auth.py  dashboard_auth.py  errors.py  keys.py  proofs.py  usage.py
api/services/: __init__.py  api_key_service.py  proof_logger.py  usage_service.py
api/tasks/: __init__.py  batch_tasks.py  celery_app.py  webhook_tasks.py
config/: settings.py
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
data/: collab_history.txt  identity_attrs.json  medical_ext.csv  ml_weights.npy  supply_stages.json  voting_sample.json
migrations/: alembic.ini  env.py
migrations/versions/: .gitkeep
monitoring/: prometheus.yml
notebooks/: analysis.ipynb
scripts/: call_advanced_sim.py  deploy.sh  locustfile.py  test_full.sh
sdks/javascript/: README.md  package.json  tsconfig.json
sdks/python/: README.md  pyproject.toml
sdks/python/zkproofapi/: __init__.py  client.py  errors.py
tests/: conftest.py
website/: next.config.ts  package-lock.json  package.json
zkp_engine/: __init__.py  batch.py  challenge.py  keys.py  models.py  prover.py  utils.py  verifier.py
(+59 files in other folders)
