[project]
name = "zkproofapi"
version = "1.0.0"
description = "Zero-Knowledge Proof Authentication as a Service"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "COM", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA"]
ignore = ["COM812"]

[tool.ruff.isort]
known-first-party = ["api", "zkp_engine"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "load: Load tests",
]

[tool.coverage.run]
source = ["api", "zkp_engine"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
